--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "next": "latest",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sitemap": "^7.1.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
